# nsga2

./: CMakeLists.txt  LICENSE  README.md
include/: individual.h  nsga2.h  population.h  random_generator.h  zdt1_problem.h  zdt3_problem.h  zdt_problem.h
src/: nsga2.cpp  zdt1_problem.cpp  zdt3_problem.cpp  zdt_problem.cpp
test/: test_nsga2.cpp
